# git-client

./: .gitignore  .opencode.json  AGENTS.md  mockdata.json  package.json  skills-lock.json
.deepseek/: instructions.md
.trae/documents/: add_graphy_column_plan.md  fix-branch-graph-lanes.md  redesign-commit-list-with-infinite-scroll.md  (+1 more)
git-client/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
git-client/src-tauri/: Cargo.toml  tauri.conf.json
git-client/src-tauri/capabilities/: default.json
git-client/src-tauri/patches/pxfm/src/: lib.rs
git-client/src-tauri/patches/pxfm/src/err/: mod.rs
git-client/src-tauri/src/: lib.rs  main.rs
git-client/src-tauri/src/commands/: blame.rs  branch.rs  commit.rs  diff.rs  gpg_key.rs  hook.rs  merge.rs  mod.rs  remote.rs  repo.rs  repo_key.rs  reset.rs  settings.rs  ssh_key.rs  stash.rs  submodule.rs  tag.rs  undo.rs  watch.rs  worktree.rs
git-client/src-tauri/src/models/: blame.rs  branch.rs  commit.rs  diff.rs  key.rs  mod.rs  remote.rs  repo.rs  stash.rs  submodule.rs  tag.rs  worktree.rs
git-client/src-tauri/src/services/: blame_service.rs  branch_service.rs  commit_service.rs  diff_service.rs  git_flow_service.rs  gpg_key_service.rs  hook_service.rs  merge_service.rs  mod.rs  remote_service.rs  repo_service.rs  reset_service.rs  ssh_key_service.rs  stash_service.rs  submodule_service.rs  tag_service.rs  worktree_service.rs
git-client/src-tauri/src/utils/: credential.rs  error.rs  mod.rs  retry.rs  ssh_agent.rs
(+322 files in other folders)
